# Bubble

./: .gitignore  README.md  pyproject.toml  simulator.ipynb  teste0_simulacao.ipynb
notebooks/: analysis.ipynb  simulator.ipynb
src/bubble/: __init__.py  affinity.py  config.py  messages.py  metrics.py  model.py  selection.py  visualization.py
tests/: __init__.py  test_model.py
