[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble"
version = "0.1.0"
description = "Filter-bubble simulation on social-network graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
